fix ordering bug and rerun

--- a/pipelines/segmentation/config/config.yaml
+++ b/pipelines/segmentation/config/config.yaml
@@ -4,7 +4,7 @@ output_path: "/scratch/indikar_root/indikar1/shared_data/segmentation_test/"
 conda_env: "/nfs/turbo/umms-indikar/Cooper/conda_envs/imaging"
 stardist_params:
   info: "2D_versatile_fluo"
-  segment_channel: "TaGFP"
+  segment_channel: "Cy5"
   prob_thresh: 0.45
   nms_thresh: 0.2
   summarize_channels: "all"
